[package]
name = "shotwell2dropbox"
version = "0.1.0"
authors = ["Koji Ota <afterjnih@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
rexiv2 = "0.7.0"
mp4parse = "0.11.2"
mp4parse_capi = "0.11.2"
ffmpeg = "0.2.0-alpha.1"
chrono = "0.4"
regex = "1"
same-file = "1"
